k8s/router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: router
  labels:
    app: router
spec:
  selector:
    app: router
  ports:
  - name: http
    port: 80
    targetPort: 8000
  - name: metrics
    port: 8000
    targetPort: 8000
  type: ClusterIP
